src/assets/css/main.css
/* ... */
.fancybox-close {
    top: 14px;
    right: 15px;
}

.fancybox-prev span {
    left: -52px;
}

.fancybox-next span {
    right: -43px;
}

.fancybox-opened .fancybox-skin {
    box-shadow: none;
}

.fancybox-nav span {
    visibility: visible;
}



/*---------------------------------------- 
==========================================

  9.  Loading overlay

==========================================
/*----------------------------------------*/
.loading-overlay {
    background:#fff;  
    position:fixed;
    left:0;
    top:0;
    width:100%;
    height:100%;
    z-index:99999
}
 
.spinner{
    position: relative;
    top: 50%;
    left: 50%;
    margin-top: -50px;
    margin-left: -20px;
    width: 100px;
    height: 40px;
    transform: translate(-50%, -50%);
    
}

.spinner span{
    display: block;
    position: absolute;
    bottom: 0;
    height: 20px;
    width: 20px;
    border-radius: 50%;
    background-color: #ffb600;
    opacity: .5;
    animation: move 1.2s ease-in-out infinite;
}

.spinner span:nth-of-type(2) {
    -webkit-animation-delay: 0.2s;
            animation-delay: 0.2s;
    left: 20px;
}
.spinner span:nth-of-type(3) {
    left: 40px;
    -webkit-animation-delay: 0.4s;
            animation-delay: 0.6s;
}
.spinner span:nth-of-type(4) {
    left: 60px;
    -webkit-animation-delay: 0.6s;
            animation-delay: 0.6s;
}
.spinner span:last-of-type {
    left: 80px;
    -webkit-animation-delay: 0.8s;
            animation-delay: 0.8s;
}

@keyframes move {
    
    0%, 100% {
       opacity: .3;
        transform: translateY(0);
    }
50% {
       opacity: 1;
     transform: translateY(-15px);
    }    
}

